--- a/RHDigital/app/build.gradle
+++ b/RHDigital/app/build.gradle
@@ -25,4 +25,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    //Firebase
+    implementation 'com.google.firebase:firebase-auth:9.0.0'
+    implementation 'com.google.firebase:firebase-database:9.0.0'
+    implementation 'com.android.support:design:28.+'
 }
+
+//Firebase
+apply plugin: 'com.google.gms.google-services'
